--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Iterators Filter Lab</title>
-  <meta name="author" content="Flatiron School">
-</head>
-<body>
-  hello
-  <script type="text/javascript" src="index.js"></script>
-</body>
-</html>
+
+findMatching(drivers);
+function findMatching(drivers, name) {
+    return drivers.filter(function (driver) {
+        return driver.toLowerCase().indexOf(name.toLowerCase()) !== -1;
+    }).sort();
+}
+
+function fuzzyMatch(drivers, name) {
+    return drivers.filter(function (driver) {
+        return driver.toLowerCase().indexOf(name.toLowerCase()) === 0;
+    }).sort();
+}
+
+function matchName(drivers, name) {
+    return drivers.filter(function (driver) {
+        return driver.name.toLowerCase() === name.toLowerCase();
+    });
+}
